// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and one 1`] = `
<View>
  <Text>
    lead
  </Text>
  <Text>
    support
  </Text>
</View>
`;

exports[`2. tablet - lead one and one 1`] = `
<View>
  <View>
    <Text>
      lead
    </Text>
  </View>
  <View />
  <View>
    <Text>
      support
    </Text>
  </View>
</View>
`;
